[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoleann"
version = "0.0.1"
description = "Small, clean-slate LEANN database"
readme = "README.md"
authors = [
  { name = "Yongye Zhu", email = "zyy1102000@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/Nicyzk/nanoleann.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoleann*"]
exclude = ["data*", "tests*"]
